@@ -1025,7 +1025,6 @@ OSSL_STORE_F_TRY_DECODE_PARAMS:121:try_decode_params
 OSSL_STORE_F_TRY_DECODE_PKCS12:122:try_decode_PKCS12
 OSSL_STORE_F_TRY_DECODE_PKCS8ENCRYPTED:125:try_decode_PKCS8Encrypted
 PEM_F_B2I_DSS:127:b2i_dss
-PEM_F_B2I_PVK_BIO:128:b2i_PVK_bio
 PEM_F_B2I_RSA:129:b2i_rsa
 PEM_F_CHECK_BITLEN_DSA:130:check_bitlen_dsa
 PEM_F_CHECK_BITLEN_RSA:131:check_bitlen_rsa
@@ -1037,12 +1036,8 @@ PEM_F_DO_BLOB_HEADER:134:do_blob_header
 PEM_F_DO_I2B:146:do_i2b
 PEM_F_DO_PK8PKEY:126:do_pk8pkey
 PEM_F_DO_PK8PKEY_FP:125:do_pk8pkey_fp
-PEM_F_DO_PVK_BODY:135:do_PVK_body
-PEM_F_DO_PVK_HEADER:136:do_PVK_header
 PEM_F_GET_HEADER_AND_DATA:143:get_header_and_data
 PEM_F_GET_NAME:144:get_name
-PEM_F_I2B_PVK:137:i2b_PVK
-PEM_F_I2B_PVK_BIO:138:i2b_PVK_bio
 PEM_F_LOAD_IV:101:load_iv
 PEM_F_PEM_ASN1_READ:102:PEM_ASN1_read
 PEM_F_PEM_ASN1_READ_BIO:103:PEM_ASN1_read_bio
@@ -2605,8 +2600,6 @@ PEM_R_NOT_ENCRYPTED:106:not encrypted
 PEM_R_NOT_PROC_TYPE:107:not proc type
 PEM_R_NO_START_LINE:108:no start line
 PEM_R_PROBLEMS_GETTING_PASSWORD:109:problems getting password
-PEM_R_PVK_DATA_TOO_SHORT:124:pvk data too short
-PEM_R_PVK_TOO_SHORT:125:pvk too short
 PEM_R_READ_KEY:111:read key
 PEM_R_SHORT_HEADER:112:short header
 PEM_R_UNEXPECTED_DEK_IV:130:unexpected dek iv
